--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
         <script src="https://google.com/jsapi"></script>
         <script src="js/app.js"></script>
 
-        <script src="jasmine/spec/resources.js"></script>
+        <script src="jasmine/spec/ResourcesSpec.js"></script>
     </body>
 </html>
