feat: Resources Map

--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Feed Reader Testing Resources</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,700">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/icomoon.css">
-        <link rel="stylesheet" href="css/styles.css">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Feed Reader Testing Resources</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="jasmine/lib/jasmine-3.1.0/jasmine.css">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,700">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/icomoon.css">
+  <link rel="stylesheet" href="css/styles.css">
 
-        <script src="jasmine/lib/jasmine-3.1.0/jasmine.js"></script>
-        <script src="jasmine/lib/jasmine-3.1.0/jasmine-html.js"></script>
-        <script src="jasmine/lib/jasmine-3.1.0/boot.js"></script>
-    </head>
-    <body>
-      <div class="container">
-        <header>
-          <h1 class="page-header">Feed Reader Testing</h1>
-          <nav class="top-nav nav-link" aria-labelledby="criteriaButton">
-            <span class="dropdown">
-              <button class="dropdown-button" id="criteriaButton" aria-expanded="false">Criteria</button>
-              <ul class="dropdown-content" hidden>
-                <a class="dropdown-link" href="https://review.udacity.com/#!/rubrics/18/view">Udacity Rubric</a>
-              </ul>
-            </span>
-          </nav>
-        </header>
-        <nav class="bottom-nav">
-          <a class="bottom-content nav-link" href="http://tiny.cc/FeedReaderTestingProject" aria-label="Home"><i class="fas fa-home tablet-font nav-link" aria-hidden="true"></i></a>
-          <a class="bottom-content nav-link visibility" href="https://docs.google.com/document/d/1LyW8kIR2m5xAq5ngpB6jGN-hDO00pvI8jvW0-4f6sUI/edit?usp=sharing">Tips to Avoid Plagiarism</a>
-          <a class="bottom-content nav-link visibility" href="http://tiny.cc/FENDLinkLibraries">All Project Resources</a>
-          <a class="bottom-content nav-link right" href="https://github.com/crystal-dawn/udacity-fend-feed-reader-testing-resources" aria-label="Github">
-            <img src="images\GitHub-Mark-32px.png" alt="GitHub"></a>
-        </nav>
-      </div>
+  <link rel="stylesheet" href="jasmine/lib/jasmine-3.1.0/jasmine.css">
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/handlebarsjs/2.0.0/handlebars.min.js"></script>
-        <script src="https://google.com/jsapi"></script>
-        <script src="js/app.js"></script>
+  <script src="jasmine/lib/jasmine-3.1.0/jasmine.js"></script>
+  <script src="jasmine/lib/jasmine-3.1.0/jasmine-html.js"></script>
+  <script src="jasmine/lib/jasmine-3.1.0/boot.js"></script>
+</head>
 
-        <script src="jasmine/spec/ResourcesSpec.js"></script>
-    </body>
+<body>
+  <div class="container">
+    <header>
+      <h1 class="page-header">Feed Reader Testing</h1>
+      <nav class="top-nav nav-link" aria-labelledby="criteriaButton">
+        <span class="dropdown">
+          <button class="dropdown-button" id="criteriaButton" aria-expanded="false">Criteria</button>
+          <ul class="dropdown-content" hidden>
+            <a class="dropdown-link" href="https://review.udacity.com/#!/rubrics/18/view">Udacity Rubric</a>
+          </ul>
+        </span>
+      </nav>
+    </header>
+    <nav class="bottom-nav">
+      <a class="bottom-content nav-link" href="http://tiny.cc/FeedReaderTestingProject" aria-label="Home"><i class="fas fa-home tablet-font nav-link" aria-hidden="true"></i></a>
+      <a class="bottom-content nav-link visibility" href="https://docs.google.com/document/d/1LyW8kIR2m5xAq5ngpB6jGN-hDO00pvI8jvW0-4f6sUI/edit?usp=sharing">Tips to Avoid Plagiarism</a>
+      <a class="bottom-content nav-link visibility" href="http://tiny.cc/FENDLinkLibraries">All Project Resources</a>
+      <a class="bottom-content nav-link right" href="https://github.com/crystal-dawn/udacity-fend-feed-reader-testing-resources" aria-label="Github">
+        <img src="images\GitHub-Mark-32px.png" alt="GitHub"></a>
+    </nav>
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/handlebarsjs/2.0.0/handlebars.min.js"></script>
+  <script src="https://google.com/jsapi"></script>
+
+  <script src="js/app.js"></script>
+
+  <script src="js/resources.js"></script>
+  <script src="jasmine/spec/ResourcesSpec.js"></script>
+</body>
+
 </html>
