--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
   <div class="container">
     <header>
-      <h1 class="page-header">Feed Reader Testing</h1>
-      <nav class="top-nav nav-link" aria-labelledby="criteriaButton">
+      <h1 class="page-header" id="pageHeader">Feed Reader Testing</h1>
+      <nav class="top-nav nav-link" id="topNav" aria-labelledby="criteriaButton">
         <span class="dropdown">
           <button class="dropdown-button" id="criteriaButton" aria-expanded="false">Criteria</button>
           <ul class="dropdown-content" hidden>
@@ -32,7 +32,7 @@
         </span>
       </nav>
     </header>
-    <nav class="bottom-nav">
+    <nav class="bottom-nav" id="bottomNav">
       <a class="bottom-content nav-link" href="http://tiny.cc/FeedReaderTestingProject" aria-label="Home"><i class="fas fa-home tablet-font nav-link" aria-hidden="true"></i></a>
       <a class="bottom-content nav-link visibility" href="https://docs.google.com/document/d/1LyW8kIR2m5xAq5ngpB6jGN-hDO00pvI8jvW0-4f6sUI/edit?usp=sharing">Tips to Avoid Plagiarism</a>
       <a class="bottom-content nav-link visibility" href="http://tiny.cc/FENDLinkLibraries">All Project Resources</a>
@@ -46,6 +46,7 @@
   <script src="https://google.com/jsapi"></script>
 
   <script src="js/app.js"></script>
+  <script src="jasmine/spec/AppSpec.js"></script>
 
   <script src="js/resources.js"></script>
   <script src="jasmine/spec/ResourcesSpec.js"></script>
