Restaurant Reviews: Stage 1 Resources

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Feed Reader Testing Resources</title>
+  <title>Restaurant Reviews: Stage 1 Resources</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,700">
@@ -23,21 +23,21 @@
 <body>
   <div class="container">
     <header>
-      <h1 class="page-header" id="pageHeader">Feed Reader Testing</h1>
+      <h1 class="page-header" id="pageHeader">Restaurant Reviews: Stage 1</h1>
       <nav class="top-nav nav-link" id="topNav" aria-labelledby="criteriaButton">
         <span class="dropdown">
           <button class="dropdown-button" id="criteriaButton" aria-expanded="false">Criteria</button>
           <ul class="dropdown-content" hidden>
-            <a class="dropdown-link" href="https://review.udacity.com/#!/rubrics/18/view">Udacity Rubric</a>
+            <a class="dropdown-link" href="https://review.udacity.com/#!/rubrics/1090/view">Udacity Rubric</a>
           </ul>
         </span>
       </nav>
     </header>
     <nav class="bottom-nav" id="bottomNav">
-      <a class="bottom-content nav-link" href="http://tiny.cc/FeedReaderTestingProject" aria-label="Home"><i class="fas fa-home tablet-font nav-link" aria-hidden="true"></i></a>
+      <a class="bottom-content nav-link" href="http://tiny.cc/RestReviewsAppProject" aria-label="Home"><i class="fas fa-home tablet-font nav-link" aria-hidden="true"></i></a>
       <a class="bottom-content nav-link visibility" href="https://docs.google.com/document/d/1LyW8kIR2m5xAq5ngpB6jGN-hDO00pvI8jvW0-4f6sUI/edit?usp=sharing">Tips to Avoid Plagiarism</a>
       <a class="bottom-content nav-link visibility" href="http://tiny.cc/FENDLinkLibraries">All Project Resources</a>
-      <a class="bottom-content nav-link right" href="https://github.com/crystal-dawn/udacity-fend-feed-reader-testing-resources" aria-label="Github">
+      <a class="bottom-content nav-link right" href="https://github.com/crystal-dawn/udacity-fend-restaurant-reviews-stage-1-resources" aria-label="Github">
         <img src="images\GitHub-Mark-32px.png" alt="GitHub"></a>
     </nav>
   </div>
